--- a/index.css
+++ b/index.css
@@ -1,262 +1,85 @@
-* {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
-	/*overflow-x: hidden;*/
-	transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
-}
-html,
-body {
-	scroll-behavior: smooth;
-	background-color: #343a40;
-	font-family: "Poppins", sans-serif;
-	width: 100%;
-	height: auto;
-	font-size: 20px;
-	color: rgba(255, 255, 255, 0.5);
-	overflow-x: hidden;
-}
-/* width */
-::-webkit-scrollbar {
-	width: 12px;
-}
-/* Track */
-::-webkit-scrollbar-track {
-	background: #343a40; /*#0a192f*/
-}
-/* Handle */
-::-webkit-scrollbar-thumb {
-	background: rgba(255, 255, 255, 0.7); /*#ccd6f6;*/
-	border-radius: 10px;
-	border: 3px solid #343a40; /*#0a192f*/
-}
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-	background: #8892b0;
-}
-
-section#header {
-	position: relative;
-	height: 100vh;
-	max-height: 100vh;
-	background-color: #111111;
-	color: #777777;
-	font-family: "Bebas Neue", sans-serif;
-	overflow-wrap: break-word;
-	padding: 0 1em;
-}
-#header h1 {
-	display: flex;
-	align-items: flex-start;
-	justify-content: center;
-	flex-direction: column;
-	font-size: 20px;
-	letter-spacing: 1vw;
-	position: relative;
-	height: 100%;
-	width: 100%;
-	/*animation: fontGrow 1s cubic-bezier(0.645,0.045,0.355,1) forwards;*/
-}
-@keyframes fontGrow {
-	from {
-		font-size: 1vw;
-	}
-	to {
-		font-size: 19vw;
-	}
-}
-#header div {
-	padding: 0;
-	width: 90%;
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-	align-items: center;
-	position: relative;
-}
-#header div:first-child span {
-	animation: colorPop 0.3s linear;
-	animation-delay: 700ms;
-}
-@keyframes colorPop {
-	0%,
-	100% {
-		color: #777777;
-	}
-	20%,
-	90% {
-		color: #0dcaf0;
-	}
-}
-#header div:last-child {
-	color: #0dcaf0;
-	font-size: 7vw;
-}
-#header svg {
-	position: absolute;
-	bottom: 0;
-	right: 2em;
-	transform: scale(5);
-	opacity: 0;
-	animation: bounce 2s cubic-bezier(0.645, 0.045, 0.355, 1) infinite;
-	animation-delay: 2s;
-}
-@keyframes bounce {
-	0% {
-		transform: scale(5) translateY(-10px);
-		opacity: 1;
-	}
-	50% {
-		transform: scale(5) translateY(0);
-		opacity: 1;
-	}
-	100% {
-		transform: scale(5) translateY(-10px);
-		opacity: 1;
-	}
-}
-
-section:not(:first-child) {
-	padding-top: 4.5em;
-	padding-bottom: 4.5em;
-}
-section {
-	padding: 0 3em;
-	margin: 0 auto;
-}
-section.dark {
-	background: #212529;
-}
-section .section-title {
-	display: flex;
-	position: relative;
-	text-align: center;
-}
-section .section-title h2 {
-	color: #8e9a9d;
-	opacity: 0.1;
-	line-height: 1.3;
-	font-size: calc(1.95rem + 8.4vw) !important;
-	width: 100%;
-	font-weight: 600;
-	font-family: "Bebas Neue", sans-serif;
-	letter-spacing: 5px;
-}
-section .section-title p {
-	font-weight: 600;
-	font-size: 2.25rem;
-	line-height: 1.5;
-	width: 100%;
-	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
-	color: #ffffff;
-}
-section h3 {
-	color: #ffffff;
-	font-weight: 600;
-	margin-bottom: 1em;
-}
-section .blue {
-	color: #0dcaf0;
-}
-section p {
-	line-height: 1.8;
-	padding-bottom: 1em;
-}
-section a {
-	color: #0dcaf0;
-}
-section .row {
-	display: flex;
-	width: 100%;
-	justify-content: space-between;
-	align-items: flex-start;
-	margin-top: 3rem;
-	font-size: 0.9em;
-}
-section#about .row div:first-child {
-	width: 58.33%;
-}
-section#about .row div:nth-child(2) {
-	width: 41.66%;
-	padding-left: 1.5rem;
-}
-section#about ul li {
-	border-bottom: 1px solid rgba(250, 250, 250, 0.12);
-	list-style-type: none;
-	padding: 12px 0;
-}
-section#about ul li:last-child {
-	border: none;
-}
-section#about ul li span {
-	font-weight: bold;
-	color: #ffffff;
-}
-section#skills .row,
-section#socials .row {
-	flex: 0 0 auto;
-	flex-wrap: wrap;
-}
-section .card {
-	width: 50%;
-	margin-bottom: 3rem;
-	position: relative;
-	flex-shrink: 0;
-}
-section#skills .card i {
-	font-weight: 900;
-	font-size: 30px;
-	width: 70px;
-	height: 70px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	color: #0dcaf0;
-	background-color: #212529;
-	border-radius: 0.375rem;
-}
-section#skills .card .card-title {
-	display: flex;
-	justify-content: flex-start;
-	align-items: center;
-}
-section#skills .card .card-title h3 {
-	padding-left: 1em;
-}
-section#skills .card p {
-	padding-left: 90px;
-}
-section#socials .card {
-	background-color: #111418;
-	height: 200px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 48%;
-}
-section#socials .card svg {
-	width: 100%;
-	max-height: 100%;
-	max-width: 100%;
-	cursor: pointer;
-}
-
-@media (max-width: 500px) {
-	section .row {
-		flex-direction: column;
-		width: 100%;
-	}
-	section .row div {
-		width: 100% !important;
-	}
-	section#socials .card {
-		padding: 1em;
-		height: 130px;
-	}
-	section#socials .card img {
-		width: 130px;
-		height: 130px;
-	}
-}
+$(document).ready(function () {
+    $(window).scroll(function () {
+      // sticky navbar on scroll script
+      if (this.scrollY > 50) {
+        $(".navbar").addClass("sticky");
+      } else {
+        $(".navbar").removeClass("sticky");
+      }
+  
+      // scroll-up button show/hide script
+      if (this.scrollY > 1600) {
+        $(".scroll-up-btn").addClass("show");
+      } else {
+        $(".scroll-up-btn").removeClass("show");
+      }
+    });
+  
+    // slide-up script
+    $(".scroll-up-btn").click(function () {
+      $("html").animate({ scrollTop: 0 });
+      // removing smooth scroll on slide-up button click
+      $("html").css("scrollBehavior", "auto");
+    });
+  
+    $(".navbar .menu li a").click(function () {
+      // applying again smooth scroll on menu items click
+      $("html").css("scrollBehavior", "smooth");
+    });
+  
+    // toggle menu/navbar script
+    $(".menu-btn").click(function () {
+      $(".navbar .menu").toggleClass("active");
+      $(".menu-btn i").toggleClass("active");
+    });
+  
+    // typing text animation script
+    var typed = new Typed(".typing", {
+      strings: [
+        "Electronics Engineer.",
+        "Data Structures and Algorithms Enthusiast.",
+        "Python Developer.",
+        "Lifelong Learner.",
+        "Web Designer.",
+        "Database Management Expert." ],
+      typeSpeed: 100,
+      backSpeed: 60,
+      loop: true
+    });
+  
+    var typed = new Typed(".typing-2", {
+      strings: [
+        "Electronics Engineer.",
+        "Data Structures and Algorithms Enthusiast.",
+        "Python Developer.",
+        "Lifelong Learner.",
+        "Web Designer.",
+        "Database Management Expert." ],
+      typeSpeed: 100,
+      backSpeed: 60,
+      loop: true
+    });
+  
+    // owl carousel script
+    $(".carousel").owlCarousel({
+      margin: 20,
+      loop: true,
+      autoplayTimeOut: 2000,
+      autoplayHoverPause: true,
+      responsive: {
+        0: {
+          items: 1,
+          nav: false
+        },
+        600: {
+          items: 2,
+          nav: false
+        },
+        1000: {
+          items: 3,
+          nav: false
+        }
+      }
+    });
+  });
+  
