--- a/index.css
+++ b/index.css
@@ -782,3 +782,36 @@ footer span a:hover {
     line-height: 38px;
   }
 }
+
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #f4f4f4;
+}
+
+header {
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
+}
+
+section {
+  background-color: #fff;
+  margin: 20px;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(66, 64, 64, 0.1);
+  transition: background-color 0.3s ease; /* Smooth transition effect */
+}
+
+section:hover {
+  background-color: #646556; /* Change the background color to black on hover */
+}
+
+h2 {
+  color: #333;
+}
+
